--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "material-design-icons-iconfont": "^6.7.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-i18n": "^9.13.1",
+    "vue-router": "^4.3.3",
+    "vuetify": "^3.6.12"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -29,6 +32,8 @@
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.1.0",
     "prettier": "^3.2.5",
+    "sass": "^1.77.7",
+    "sass-loader": "^14.2.1",
     "start-server-and-test": "^2.0.4",
     "vite": "^5.3.1",
     "vitest": "^1.6.0"
