--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "material-design-icons-iconfont": "^6.7.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
