--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "@vueuse/core": "^11.0.3",
     "material-design-icons-iconfont": "^6.7.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
